2009-10-02  higepon  <higepon@users.sourceforge.jp>

	* tools/psyntax-r6rs/rev10_to_10/psyntax/compat.ss: Fixed Issue 102 pointed out by mrc.mgg.

2009-09-29  higepon  <higepon@users.sourceforge.jp>

	* Makefile.am : Added support for out-of-tree builds, patch by a.rottmann@gmx.at. Issue 99.

	* tools/psyntax-r6rs/rev10_to_10/psyntax/compat.ss: Removed unused debug message.
	                                                    Issue 100 pointed out by mrc.mgg.

2009-09-04  higepon  <higepon@users.sourceforge.jp>

	* Transcoder.cpp (Transcoder::Transcoder): Fixed the default EolStyle of Transcoder ponted out by mtakuya.

	* FFIProcedures.cpp : void* argument of callback is converted to pointer object.

	* ffi_stub_x86_64.S : Renamed.

2009-09-03  higepon  <higepon@users.sourceforge.jp>

	* test/ffi.scm: Now callback works on OSX and Ubuntu amd64.

2009-08-31  higepon  <higepon@users.sourceforge.jp>

	* Makefile.am : Added ffi_stub_xx.s support.

2009-08-30  higepon  <higepon@users.sourceforge.jp>

	* FFITest.cpp (getArgumentsStub): Added.
	              (getArgumentsStub2): Added.

2009-08-28  higepon  <higepon@users.sourceforge.jp>

	* FFIProcedures.cpp (struct CallBackTrampoline): Added for FFI callback.

2009-08-26  higepon  <higepon@users.sourceforge.jp>

	* test/list.scm : Passed.	

	* compiler.scm (pass1/let): Fixed compilation of let's value non-tail.

2009-08-25  higepon  <higepon@users.sourceforge.jp>

	* test/list.scm : Failed.

	* tools/psyntax-r6rs/rev10_to_10/psyntax/expander.ss : Now psyntax pass let/named-let to backend instead of
	                                                       converting to lambda or letrec.

2009-08-23  higepon  <higepon@users.sourceforge.jp>

	* tools/psyntax-r6rs/rev10_to_10/psyntax/builders.ss : Changed R6RS expansion pattern.

	* tools/psyntax-r6rs/rev10_to_10/psyntax/expander.ss: An output of -e option is now stripped.

2009-08-21  higepon  <higepon@users.sourceforge.jp>
